# unified-llm

./: Cargo.toml  README.md
.github/workflows/: ci.yaml
src/: api.rs  catalog.rs  client.rs  error.rs  lib.rs  middleware.rs  retry.rs  sse.rs  streaming.rs  testing.rs  types.rs
src/providers/: anthropic.rs  gemini.rs  mod.rs  openai.rs  openai_compat.rs
tests/: live_providers.rs
