[package]
name = "unified-llm"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Multi-provider LLM client library"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bkrabach/unified-llm"
readme = "README.md"
keywords = ["llm", "openai", "anthropic", "gemini", "ai"]
categories = ["api-bindings", "asynchronous"]

[dependencies]
tokio        = { version = "1", features = ["rt-multi-thread", "macros", "time", "fs", "process", "io-util", "io-std"] }
reqwest      = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
async-trait  = "0.1"
futures      = "0.3"
thiserror    = "2"
chrono       = { version = "0.4", features = ["serde"] }
base64       = "0.22"
uuid         = { version = "1", features = ["v4", "serde"] }
tracing      = "0.1"
rand         = "0.9"
tokio-stream = { version = "0.1", features = ["sync"] }
jsonschema   = "0.26"

[dev-dependencies]
tokio    = { version = "1", features = ["rt-multi-thread", "macros", "test-util"] }
anyhow   = "1"
proptest = "1"
wiremock = "0.6.5"
